package seedu.address.model.application;

/**
 * Simple enum for status that represents current state of application
 */
public enum Status {
APPLIED, INTERVIEWING, OFFERED, REJECTED, WITHDRAWN
}
